--- a/enroll/Cargo.toml
+++ b/enroll/Cargo.toml
@@ -13,6 +13,7 @@ serde_json = "1.0.64"
 libgatekeeper-sys = {path = "../../libgatekeeper-sys"}
 clap = "2.27.1"
 serde = { version = "1.0.126", features = ["derive"] }
+dotenv = { git = "https://github.com/tustvold/dotenv", branch = "add-multiline-support" }
 
 [[bin]]
 name = "enroll"
